# lt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  add_n_v2.cpp  curl.hpp  down_for_aid.cpp  down_res.cpp  down_v1v2.cpp  gen_n_v2.cpp  gen_res_conf.cpp  link_f.cpp  link_onABC.cpp  link_onBP.cpp  link_onRPR.cpp  merge_val.cpp  modify_json.cpp  mv_r.cpp  plug.cpp  rename.cpp  replace_wxid.cpp  scomm.hpp  swap_f.cpp  sync_dir.cpp  test.cpp  tit_s.cpp  up_bv.cpp
client/: socket_win_impl.cpp  verify.hpp
cmake/: FindCS.cmake  FindMINI_TEST.cmake  FindZLIB.cmake
python/: cmp.py
tools/: CMakeLists.txt
tools/LocalMemComm/: CMakeLists.txt
tools/LocalMemComm/dll/: lmc.cpp  lmc.h
tools/LocalMemComm/include/: common.h  local_mem_adapter.h  local_mem_comm.h  local_mem_proto.h  test_component.h
tools/LocalMemComm/src/: common.cpp  local_mem_adapter.cpp  test.cpp  test_component.cpp
tools/LocalMemComm/test/: test.cpp  test2.cpp  test3.cpp
tools/mp3/: CMakeLists.txt
tools/mp3/cmake/: FindBASS_base.cmake  Findbass24.cmake  Findbassflac24.cmake
tools/mp3/include/: MMFile.h  Pumper.h  mp3.h
tools/mp3/src/: MMFile.cpp  Pumper.cpp  lib.cpp
tools/mp3/src/lrc/: lrc_analyse.cpp  lrc_loader.cpp
