cmake_minimum_required(VERSION 3.0.0)
project(lt VERSION 0.1.0)

if(MSVC)
    add_definitions("/std:c++17")
endif()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

find_package(MINI_TEST)
find_package(ZLIB)
find_package(CS)

if(MINI_TEST_FOUND)
    include_directories(${MINI_TEST_INCLUDE_DIR} ${CMAKE_SOURCE_DIR})
endif()

if(ZLIB_FOUND)
    include_directories(${ZLIB_INCLUDE_DIR})
    link_libraries(${ZLIB_LIBRARY})
endif()

if(CHAT_SERVER_FOUND)
    message("CHAT_SERVER_INCLUDE_DIR = ${CHAT_SERVER_INCLUDE_DIR}")
    include_directories(${CHAT_SERVER_INCLUDE_DIR})
endif()

add_executable(tit_s tit_s.cpp)
add_executable(merge_val merge_val.cpp)
add_executable(mv_r mv_r.cpp)
add_executable(up_bv up_bv.cpp)
add_executable(modify_json modify_json.cpp)
#onRPR onRequestPermissionsResult
add_executable(link_onRPR link_onRPR.cpp)
add_executable(swap_f swap_f.cpp)
add_executable(link_onABC link_onABC.cpp)
add_executable(link_onBP link_onBP.cpp)
add_executable(test test.cpp)
add_executable(add_n_v2 add_n_v2.cpp)
add_executable(gen_n_v2 gen_n_v2.cpp)
add_executable(down_for_aid down_for_aid.cpp)
add_executable(down_v1v2 down_v1v2.cpp)
add_executable(down_res down_res.cpp)
add_executable(gen_res_conf gen_res_conf.cpp)
add_executable(replace_wxid replace_wxid.cpp)
add_executable(plug plug.cpp)
